fixed spacing issues

--- a/src/app.css
+++ b/src/app.css
@@ -377,15 +377,25 @@ left: calc(50% - 6px);
 }
 
 @media screen and (max-width: 767px) {
+    #skills {
+        padding: 1rem -100rem;
+    }
     .skills-container {
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px
+        --gap: 5%;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-left: calc(-1 * var(--gap));
+        margin-right: calc(-1 * var(--gap));
     }
     .skill {
-      width: 100%;
-      max-width: 230px;
-      margin: 1rem 0;
+        --gap: 0.8rem;
+        width: 100%;
+        max-width: 230px;
+        transform: scale(0.8);
+        margin-left: calc(-1 * var(--gap));
+        margin-right: calc(-1 * var(--gap));
+        margin-top: calc(-1 * var(--gap));
+        padding: 0rem;
     }
   }
   
